* RELEASE 13G
- Automatically cut research spending to avoid bankruptcy
- Option to aggressively penalize bankrupt players
  - Sells non-gold-generating buildings, non-free units, and switches city production to Wealth
- Remove pause for "we love the king" messages
- Holding shift while a stack bombard is going will temporarily turn off combat animations
- Fix units could trespass by attacking an enemy unit across a restricted border
- Widen C3X error, info, and warning popups

* RELEASE 13
- AI two-city start
- Remove cap on turn limit
- Option to strengthen forbidden palace decorruption effect to match the palace's
- Option to allow military great leaders to hurry wonders
- Option to reduce AI research rate by half
- Resource generation from buildings can be set to ignore revealing tech
- Address some issues with text encoding
  - Includes fix for encoding error on Windows 8.1
- Apply building prereqs to all unit types with the same name
  - Fixes prereq sometimes not applying to AIs

* RELEASE 12
- Support for the executable from PCGames.de
- Option to modify rules for retreat eligibility
- Re-encode config file contents to match Civ 3's internal encoding
  - Config files should be encoded in UTF-8. They will be converted to Windows-1252 when loaded.
- Accented Latin characters no longer separate words
- Fix crash when a building-generated resource triggers the advisor popup for first connection
- Fix workers in boats can do "extra" jobs (road-to, auto-irrigate, etc.) despite restriction

* RELEASE 11
- Buildings can generate resources
- Buildings can be set as prerequisites for unit production
- On the city screen, hold shift when clicking a specialist to switch to the previous type
- Can cancel out pop pollution with negative pollution amount on building flagged as removing pop pollution
- Disallow workers from improving water tiles
- Exempt invisible and hidden nationality units from trespassing restriction
- Do not group units with differing charm statuses
